# synthetic_data

./: .gitignore  Cargo.toml  README.md  build.rs  environment.yml
.github/workflows/: build.yml
src/: lib.rs  main.rs  tests.rs  tvae.rs  utils.rs
src/tvae/: attention.rs  classifier.rs  data_transform.rs  data_transformer.rs  input.rs  nalu.rs
testdata/: brain_stroke_d.csv  brain_stroke_mostly.csv  brain_stroke_mostly_d.csv  brain_stroke_ours.csv  brain_stroke_ours_d.csv  brain_stroke_sdv.csv  brain_stroke_sdv_d.csv  brain_stroke_tonic.csv  brain_stroke_tonic_d.csv  diabetes_mostly.csv  diabetes_tonic.csv  testnet2.json
